add ScullyRoutesService in about module

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,6 +2,8 @@
 <ul>
     <li>Angular</li>
     <li>Need Routes w/ Params</li>
-    <li>Cacheable Calls</li>
+    <li>Cashable Calls</li>
     <li>Add Blog Support</li>
+    <li>All Routes: {{ routes.length }}</li>
+    <li *ngFor="let routeItem of routes" routerLink="/donuts"></li>
 </ul>
